# cvt_ros

./: CMakeLists.txt  README.md  package.xml  sync.sh
cvt_ros/: .CMakeLists.txt.swp  .package.xml.swp  CMakeLists.txt  package.xml
cvt_ros/cfg/: ChameleonSettings.cfg  RGBDCamera.cfg
cvt_ros/cfg/cpp/cvt_ros/: ChameleonSettingsConfig.h
cvt_ros/docs/: ChameleonSettingsConfig-usage.dox  ChameleonSettingsConfig.dox  ChameleonSettingsConfig.wikidoc
cvt_ros/include/cvt_ros/: ImageSubscriber.h  RGBDSubscriber.h  ROSSpinner.h  StereoSubscriber.h
cvt_ros/launch/: chameleon_stereo.launch  direct_vo.launch  direct_vo_racket.launch
cvt_ros/resources/: chameleon_49712223533866357.yaml  chameleon_49712223533866360.yaml  depth_PrimeSense_PS1080_00.yaml  rgb_PrimeSense_PS1080_00.yaml  xtion_depth.yaml  xtion_rgb.xml  xtion_rgb.yaml
cvt_ros/resources/calib_chameleon_desktop/: chameleon_49712223533866357.yaml
cvt_ros/src/: ChameleonStereo.cpp  ChameleonStereo.h  PoseView.cpp  PoseView.h  RGBDCamera.cpp  RGBDCamera.h  RGBDGui.cpp  RGBDGui.h  V4L2Stereo.cpp  V4L2Stereo.h  chameleon_stereo.cpp  image_view.cpp  rgbd_camera.cpp  rgbd_view.cpp  stereo_view.cpp  synced_calib_publisher.cpp  tsdf_meshing.cpp  v4l2_stereo.cpp
cvt_ros/src/cvt_ros/cfg/: ChameleonSettingsConfig.py
cvt_ros/src/direct_vo/: DirectVisualOdometry.h  RGBDVONode.h  direct_vo.cpp
cvt_ros/src/lib/: ImageSubscriber.cpp  RGBDSubscriber.cpp  StereoSubscriber.cpp
cvt_ros_bridge/: CMakeLists.txt  package.xml
cvt_ros_bridge/include/cvt_ros_bridge/: cvt_ros_bridge.h
cvt_ros_bridge/src/: convert_stereo_calib.cpp
ueye/: CMakeLists.txt  manifest.xml  nodelet_plugins.xml
ueye/cfg/: params.cfg
ueye/launch/: rosbagnodelet.launch  ueyestereocamnodelet.launch
ueye/resources/: ueye_4002738788.yaml  ueye_4002738790.yaml
ueye/src/: UEyeNode.h  ueye_cam.cpp  ueye_stereo.cpp
ueye/src/nodelets/: bag_nodelet.cpp  ueye_stereo.cpp
