<?xml version="1.0"?>
<package>
  <name>cvt_ros</name>
  <version>0.0.0</version>
  <description>The cvt_ros package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="kloses@cs.tum.edu">Sebastian Klose</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>MIT</license>

  <!-- <url type="website">http://ros.org/wiki/cvt_ros</url> -->

  <!-- Authors do not have to be maintianers, but could be -->
  <author email="kloses@cs.tum.edu">Sebastian Klose</author> 

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cvt_ros_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>
  <build_depend>tf2_ros</build_depend>
  <run_depend>cvt_ros_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
